Release notes for SIP Express Router (ser)
***********************************************

$Id: NEWS,v 1.90 2008/10/07 11:21:32 andrei Exp $



2.1.0 changes

modules:
 - textops   - functions:
                        - remove_hf_re("regexp") -- filter message headers out
                          by matching the header name field against a regular
                          expression.
 - avp       - export new selects table to allow dissecting the content of an
               attribute by interpreting it as a "name-addr" value 
 - auth      - experimental support for one-time nonces: when enabled a nonce
               will be accepted only for one response (each new request will
               be challenged). See one_time_nonce.
             - experimental support for nc checking when qop=auth
               (fast, non-locking implementation, see nonce_count, 
                nc_array_size, nc_array_order and nid_pool_no) 
             - switched to base64 nonces
             - record nonce generation time inside the nonce so that a 
               received nonce can be checked against ser start time
               (if older => stale). This allows gracefully handling ser
               restarts with different auth configs.
             - added extra authentication checks support, to protect
               against various reply attacks.
             - params:
                       - nonce_auth_max_drift - maximum difference in seconds
                          from the current time, if a nonce appears to be
                          created in the future (if exceeded the nonce is 
                          considered stale).
                       - one_time_nonce - if enabled each nonce is allowed 
                          only once => each new request (including 
                          retransmissions!) will be challenged. It should be
                          used only in stateful mode (so that tm deals with